--- a/style/styles.css
+++ b/style/styles.css
@@ -48,7 +48,7 @@ button:active {
 }
 .overlayContainer{
 	width: 440px;
-    height: 500px;
+    height: 490px;
 	background: #6a6a6a;
     
 }
@@ -61,13 +61,13 @@ button:active {
 
 #navBar{
 	width: 100%;
-	height: 25px;
+	height: 25%;
 	background: #ababab;
 	clear:both;
 }
 #topBar{
 	width: 100%;
-	height: 75px;
+	height: 75%;
 	background: #6a6a6a;
 }
 #mapSetTable{
@@ -164,10 +164,71 @@ body input[type='text'] {
     box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.6);
     color: #999;
     background-color: #f0f0f0;
-    width: 500px;
-    font-size: 30px;
+    width: 400px;
+    font-size: 22px;
     font-family: Helvetica, sans-serif;
     padding: 5px;
     border: 1px solid #bbbbbb;
-    font-weight: 500; }
+    font-weight: 400; 
+    }
+    
+    
+/**  Modal Window **/
+.divModalDialog  {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    /*! important !*/
+    display:none;
+    /* last attribute set darkness on scale: 0...1.0 */
+    background-color:rgba(0,0,0,0.5);
+    text-align:center;
+    z-index:101;
+}
+/*** ! target attribute does the job ! ***/
+.divModalDialog:target  { display:block; }
+
+
+.divModalDialog div {
+	/* rounded corners */
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	z-index:102;
+	background:#bbbbbb;
+}
+
+.divModalDialog #modalInner1 {
+	/* either absolute or fixed */
+	position:fixed;
+	top:10%;
+	right:25%;
+	width:50%;
+	height:40%;
+
+}
+
+.divModalDialog #modalInner2 {
+	/* either absolute or fixed */
+	position:fixed;
+	top:10%;
+	right:30%;
+	width:40%;
+	height:80%;
+
+}
+
+.divModalDialog a {font-size: 22px; text-decoration:none; padding: 5px; margin: 5px;} 
+.divModalDialog a:link {color:#000000;}      /* unvisited link */
+.divModalDialog a:visited {color:#000000;}  /* visited link */
+.divModalDialog a:hover {color:#000000;}  /* mouse over link */
+.divModalDialog a:active {color:#000000;}  /* selected link */
+.divModalDialog h6 {color:#CD3700; font-size: 22px; padding: 5px; margin: 5px; font-weight:normal;}
+
+#selectFileMethod{ float: left;  border-color: #600; border-width: 0 1px 0 0; border-style: solid; height:100%;}
+#selectFile {height:80%; width: 50%}
+    
+
 
