--- a/style/styles.css
+++ b/style/styles.css
@@ -220,7 +220,7 @@ body input[type='text'] {
 
 }
 
-.divModalDialog a {font-size: 22px; text-decoration:none; padding: 5px; margin: 5px;} 
+.divModalDialog a {font-size: 22px; text-decoration:none; padding: 5px; margin: 5px; font-weight:normal;} 
 .divModalDialog a:link {color:#000000;}      /* unvisited link */
 .divModalDialog a:visited {color:#000000;}  /* visited link */
 .divModalDialog a:hover {color:#000000;}  /* mouse over link */
