--- a/style/styles.css
+++ b/style/styles.css
@@ -8,6 +8,28 @@
   user-select: none;
 }
 
+.DropHere {
+  background: #999;
+  border-style: dashed;
+  border-color: #666;
+  margin: 0 auto;
+  width: 380px;
+  padding: 0px;
+  text-align: center;
+  /* border-radius */
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  /* box-shadow */
+  -webkit-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+  box-shadow: rgba(0,0,0,0.2) 0px 1px 3px;
+}
+.DropHere h3{
+	font-size: 20px;
+	font-weight: bold;
+	color: #555555;
+}
 
 button, #fileUploadButton{
 	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -122,10 +144,10 @@ body, html {
 					color: #888888;
 				}
 				.ember-view ul li img {
-					float: left;
+					float: right;
 					margin: 0 10px 0 0;
-					width: 48px;
-					height: 48px;
+					width: 25px;
+					height: 29px;
 				}
 				.ember-view ul li h3 {
 					font-size: 11pt;
