--- a/style/styles.css
+++ b/style/styles.css
@@ -1,12 +1,6 @@
-/**  Mapset Library **/
-#mapsetlib_canvas {
-    background: none repeat scroll 0 0 #ffffff;
-    height: 480px;
-    margin-top: 10px;
-    overflow: auto;
-    width: 340px;
+* {
+	font-family: 'tahoma', sans-serif;
 }
-
 [draggable] {
   -moz-user-select: none;
   -khtml-user-select: none;
@@ -36,6 +30,7 @@
 	font-weight: bold;
 	color: #555555;
 }
+
 
 
 button, #fileUploadButton{
@@ -102,10 +97,10 @@ button:active {
 	/*background: #6a6a6a;*/
 }
 #mapSetTable{
-	width: 450px;
+	width: 100%;
     height: 500px;
-    margin-right: 50px; 
-    padding: 5px; 
+
+    
 }
 body, html {
 	background: #eeeeee;
@@ -155,6 +150,10 @@ body, html {
 					margin: 0 10px 0 0;
 					width: 25px;
 					height: 29px;
+				}
+				.ember-view ul li img:hover {
+					margin: 5px 10px 0 0;
+
 				}
 				.ember-view ul li h3 {
 					font-size: 11pt;
@@ -264,7 +263,7 @@ td {border: none; padding: 0px}
 h2 {font-size: 10px}
 
 /** MAP **/
-#map_canvas { width:450px; height:500px; margin-right: 50px; padding: 5px; }
+#map_canvas { width:500px; height:500px;}
 		
 		
 		#view-gm { background-image:url(google.gif); background-repeat:no-repeat;
@@ -275,4 +274,3 @@ h2 {font-size: 10px}
 		
 		#map_canvas div { font-weight:bold;}
 		#map_canvas #iwsw p { font-weight:normal !important;}
-
