--- a/style/styles.css
+++ b/style/styles.css
@@ -12,9 +12,9 @@
   background: #999;
   border-style: dashed;
   border-color: #666;
-  margin: 0 auto;
+  margin: 10px auto;
   width: 380px;
-  padding: 0px;
+  padding: 0px 0px 0px 0px;
   text-align: center;
   /* border-radius */
   -webkit-border-radius: 5px;
@@ -99,7 +99,7 @@ button:active {
 #mapSetTable{
 	width: 100%;
     height: 500px;
-
+	
     
 }
 body, html {
@@ -109,9 +109,16 @@ body, html {
 
 
 .ulList{
+	width: 100%;
+	height: 440px;
 	padding: 0;
+	overflow: auto;
 }
-	
+.checkBox {
+	width:30px; 
+	height:30px;
+	}
+
 
 			.ember-view ul li {
 				text-align: left;
@@ -119,7 +126,6 @@ body, html {
 				padding: 5px;
 				list-style: none;
 				border-bottom: 1px solid #999999;
-				
 				min-height: 30px;
 				background: #eeeeee; /* Old browsers */
 				background: -moz-linear-gradient(top,  #eeeeee 0%, #dddddd 100%); /* FF3.6+ */
