--- a/style/styles.css
+++ b/style/styles.css
@@ -13,7 +13,7 @@
   border-style: dashed;
   border-color: #666;
   margin: 10px auto;
-  width: 380px;
+  width: 370px;
   padding: 0px 0px 0px 0px;
   text-align: center;
   /* border-radius */
@@ -71,6 +71,16 @@ button:active {
     
 }
 
+.library input[type='text'] {
+    width: 250px;
+    font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    padding: 5px;
+    margin-left: 5px;
+    border: 1px solid #bbbbbb;
+    font-weight: 300; 
+    }
+
 
 .overlayContainer{
 	width: 400px;
@@ -114,6 +124,16 @@ body, html {
 	padding: 0;
 	overflow: auto;
 }
+.map_set_bottom{
+	width: 100%;
+	height: 455px;
+	padding: 0;
+	margin-top: 0;
+	overflow: auto;
+}
+.mapsetdiv{
+	height: auto;
+}
 .checkBox {
 	width:30px; 
 	height:30px;
@@ -156,9 +176,11 @@ body, html {
 					margin: 0 10px 0 0;
 					width: 25px;
 					height: 29px;
+					draggable: false;
 				}
 				.ember-view ul li img:hover {
 					margin: 5px 10px 0 0;
+					draggable: false;
 
 				}
 				.ember-view ul li h3 {
