added name editing in mapset items

--- a/style/styles.css
+++ b/style/styles.css
@@ -70,7 +70,9 @@ button:active {
 
     
 }
-
+.mapsetdiv input[type='text'] {
+	width: 200px;
+}
 .library input[type='text'] {
     width: 250px;
     font-size: 14px;
