--- a/style/styles.css
+++ b/style/styles.css
@@ -70,6 +70,16 @@ button:active {
 
     
 }
+.nameContainer input[type='text'] {
+	width: 380px;
+	font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    padding: 5px;
+    margin-left: 0px;
+    border: 1px solid #bbbbbb;
+    font-weight: 300; 
+}
+
 .mapsetdiv input[type='text'] {
 	width: 200px;
 }
